--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "poetry-aliases"
-version = "0.1.0"
+version = "1.0.0"
 description = ""
 authors = ["celsius narhwal <hello@celsiusnarhwal.dev>"]
 readme = "README.md"
@@ -8,7 +8,12 @@ packages = [{ include = "poetry_aliases" }]
 
 [tool.poetry.dependencies]
 python = "^3.11"
+poetry = "^1.3.2"
+click = "^8.1.3"
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.plugins."poetry.application.plugin"]
+aliases = "poetry_aliases.plugin:PoetryAliasesPlugin"
