--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,14 @@
 [tool.poetry]
 name = "poetry-aliases"
-version = "1.0.0"
-description = ""
+version = "1.0.1"
+description = "Create aliases for Poetry commands"
+homepage = "https://github.com/celsiusnarhwal/poetry-aliases"
 authors = ["celsius narhwal <hello@celsiusnarhwal.dev>"]
 readme = "README.md"
 packages = [{ include = "poetry_aliases" }]
 
 [tool.poetry.dependencies]
-python = "^3.11"
+python = "^3.7"
 poetry = "^1.3.2"
 click = "^8.1.3"
 
